cambio de logica

--- a/IFTS24/Gestion_productos/Gestion_productos.csproj
+++ b/IFTS24/Gestion_productos/Gestion_productos.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GP.BE\GP.BE.csproj" />
+    <ProjectReference Include="..\GP.BLL\GP.BLL.csproj" />
+    <ProjectReference Include="..\GP.DAO\GP.DAO.csproj" />
   </ItemGroup>
 
   <ItemGroup>
